--- a/.licenserc.yaml
+++ b/.licenserc.yaml
@@ -214,4 +214,7 @@ header:
     # NGINX
     - 'src/brpc/details/http_parser.*'
 
+    # Fuzzing seed
+    - 'test/fuzzing/fuzz_*_seed_corpus/*'
+
   comment: on-failure
